<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="android.example.com.afiframadhan_1202154217_modul1.SecondActivity">

    <!-- Ini TextView buat Judul -->
    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/judul"
        android:textSize="15pt" />

    <!-- Ini TextView buat Nampilin Eatbus/Abnormal -->
    <TextView
        android:id="@+id/sub_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/judul"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="8pt" />

    <!-- Ini EditText buat Menu -->
    <TextView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sub_judul"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/menu" />

    <!-- Ini TextView untuk menampilkan Manu Value -->
    <TextView
        android:id="@+id/menu_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="10pt" />

    <!-- Ini EditText buat Jumlah -->
    <TextView
        android:id="@+id/porsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/porsi" />

    <!-- Ini TextView untuk menampilkan Porsi Value -->
    <TextView
        android:id="@+id/porsi_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/porsi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="10pt" />

    <!-- Ini EditText buat Harga -->
    <TextView
        android:id="@+id/harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/porsi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/harga" />

    <!-- Ini TextView untuk menampilkan Harga Value -->
    <TextView
        android:id="@+id/harga_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/harga"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="10pt" />

</RelativeLayout>
